--- a/src/pages/RegisterEmail.css
+++ b/src/pages/RegisterEmail.css
@@ -73,6 +73,32 @@
   text-decoration: none;
 }
 
+.register-container .submit-button {
+  border-radius: 2px;
+  border: none;
+  padding: 1px;
+  display: inline-block;
+  cursor: pointer;
+  text-decoration: none !important;
+  color: #c3e1f8;
+  background: transparent;
+  text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.3);
+  background: linear-gradient(to right, #47bfff 5%, #1a44c2 60%);
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+  background-position: 25%;
+  background-size: 330% 100%;
+}
+
+.register-container .submit-button:hover {
+  text-decoration: none !important;
+  color: #fff;
+  background: transparent;
+  background: linear-gradient(to right, #47bfff 5%, #1a44c2 60%);
+  box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.5);
+  background-position: 0%;
+  background-size: 330% 100%;
+}
+
 
 .register-container .message {
   color: red;
