Fix: adjuts CSS for names and others

--- a/src/App.css
+++ b/src/App.css
@@ -54,6 +54,7 @@
   position: relative;
   display: inline-block;
   height: 100%;
+  width: 100%;
 }
 
 .media-with-caption::after {
@@ -63,4 +64,6 @@
   color: #aaa;
   top: 0;
   left: 0;
+  height: 100%;
+  width: 100%;
 }
