--- a/src/components/Profile/ProfilePage.css
+++ b/src/components/Profile/ProfilePage.css
@@ -3,7 +3,16 @@
   position: relative;
   color: #e5e5e5;
   font-family: Arial, Helvetica, sans-serif;
-  min-height: 100vh;
+  height: 100%;
+  margin: 20px 0;
+}
+
+.profile-page .spacer{
+  background: transparent;
+}
+
+.profile-page .main-content{
+  position: relative;
 }
 
 /* ---- VIDEO NỀN ĐỘNG (LỚP DƯỚI CÙNG) ---- */
@@ -37,9 +46,6 @@
 .profile-page .profile-content {
   position: relative;
   z-index: 1;
-  max-width: 980px;
-  margin: 40px auto 0 auto;
-  padding: 0 20px 20px 20px;
   background: linear-gradient(
     to bottom,
     rgba(23, 26, 33, 0.95),
@@ -52,7 +58,6 @@
   position: relative;
   border-radius: 5px;
   overflow: hidden;
-  margin: -20px -20px 24px -20px;
   height: 300px;
   margin-bottom: 20px;
 }
