--- a/src/pages/Community/ChatBody.css
+++ b/src/pages/Community/ChatBody.css
@@ -6,9 +6,16 @@
     position: relative;
 }
 
-
-
-.split .pane {
+.chat-main.split .pane {
     overflow: auto;
     background-color: #f4f4f4;
+}
+
+.chat-main.split .gutter {
+    cursor: ew-resize;
+    border: .5px solid #121216;
+    border-top: 2px solid rgba(34, 37, 43, .8);
+    border-bottom: 3px solid rgba(34, 37, 43, .9);
+    background-color: #22252b;
+    min-width: 3px;
 }
