--- a/src/pages/Community/ChatBody.css
+++ b/src/pages/Community/ChatBody.css
@@ -1,3 +1,7 @@
+.chat-main {
+    position: relative;
+}
+
 .chat-main .friend-list>* {
     transition: all .32s ease-in-out;
 }
@@ -18,4 +22,66 @@
     border-bottom: 3px solid rgba(34, 37, 43, .9);
     background-color: #22252b;
     min-width: 3px;
+}
+
+.chat-main .add-group-popup-container {
+    position: absolute;
+    z-index: 11;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.2);
+
+}
+
+.add-group-popup-container .popup-wrapper {
+    max-width: calc(100% / 2);
+    min-width: calc(100% / 3);
+    margin: auto;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+}
+
+.popup-wrapper .title {
+    text-align: center;
+    text-transform: uppercase;
+}
+
+.popup-wrapper .form-group {
+    display: flex;
+    flex-direction: column;
+}
+
+.popup-wrapper .form-group .selected-members-list {
+    height: 35px;
+}
+
+.popup-wrapper .form-group .friend-list {
+    display: flex;
+    flex-direction: column;
+    padding: 0 10px;
+}
+
+.popup-wrapper .form-group .friend-list .friend-item {
+    display: flex;
+    flex-direction: row;
+    background: #6c757d;
+    width: 100%;
+    align-items: center;
+    gap: 5px;
+    cursor: pointer;
+}
+
+.popup-wrapper .form-group .friend-list .friend-item .avatar {
+    width: 38px;
+    height: 100%;
+}
+
+.popup-wrapper .form-group .friend-list .friend-item .avatar img {
+    height: 100%;
+    width: 100%;
+}
+
+.popup-wrapper .form-group .friend-list .friend-item.selected {
+    background: #596168;
+
 }
