--- a/src/pages/Community/ChatBodyRight.css
+++ b/src/pages/Community/ChatBodyRight.css
@@ -13,7 +13,7 @@
     position: relative;
 }
 
-.chat-tab .friend-box {
+.chat-tab .current-chat-box {
     width: 189px;
     height: 100%;
     position: relative;
@@ -29,11 +29,11 @@
     gap: 10px;
 }
 
-.friend-box .friend-avatar img {
+.current-chat-box .current-chat-avatar img {
     height: calc(100% - 2px);
 }
 
-.friend-box .friend-name {
+.current-chat-box .current-chat-name {
     flex-grow: 1;
     line-height: 16px;
     overflow: hidden;
@@ -43,7 +43,15 @@
     transition: text-overflow 0s linear;
 }
 
-.chat-wrapper .chat-history {
+.current-chat-box .current-chat-icon {
+    cursor: pointer;
+}
+
+.current-chat-box .current-chat-icon:hover {
+    filter: brightness(1.5);
+}
+
+.chat-wrapper .chat-history-container {
     overflow: auto;
     position: relative;
     padding: 0 6px 14px 6px;
@@ -53,19 +61,71 @@
         linear-gradient(rgba(30, 32, 37, 0.8), rgba(30, 32, 37, 0.8)),
         url("https://cdnmedia.baotintuc.vn/Upload/DGCvMTLSo95Cq4TvfGr0A/files/2019/08/14-8/dhfpt.JPG");
     font-size: 14px;
+    display: flex;
+    flex-direction: row;
 }
 
-.chat-tab .padder-top {
-    background: linear-gradient(to right, #3a3e46 80%, #2c3037 100%);
-    min-height: 4px;
-    transition: background-color .2s ease-in-out;
-    position: absolute;
-    bottom: 0;
-    z-index: 1;
-    width: 100%;
-    left: 0;
-    right: 0;
+.chat-history-container .chat-history-wrapper {
+    transition: width .32s ease-in-out;
 }
+
+.chat-history-container .group-chat-detail {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    color: #c5d6d4;
+    transition: width .32s ease-in-out, background-color .32s ease-in-out;
+    background-color: rgba(34, 37, 43, 0);
+    position: relative;
+}
+
+.group-chat-detail .toggle-btn-detail {
+    cursor: pointer;
+    text-align: center;
+    font-size: 24px;
+}
+
+.group-chat-detail .toggle-btn-detail:hover {
+    filter: brightness(1.1);
+
+}
+
+.group-chat-detail .member {
+    padding: 0 5px;
+    display: flex;
+    flex-direction: row;
+    gap: 5px;
+}
+
+.group-chat-detail .member .member-avatar {
+    width: 24px;
+    height: 24px;
+    transition: filter 0.3s ease;
+}
+
+.group-chat-detail .member:hover .member-avatar {
+    filter: brightness(1.3);
+}
+
+.middle-body .padder-top {
+    background: linear-gradient(to right, #3a3e46 80%, #2c3037 100%);
+}
+
+.padder-top .padder-top-content .setting-icon {
+    width: 32px;
+    height: 32px;
+    text-align: center;
+    cursor: pointer;
+}
+
+.padder-top .padder-top-content .setting-icon svg {
+    fill: #5c6575;
+}
+
+.padder-top .padder-top-content .setting-icon svg:hover {
+    fill: white;
+}
+
 
 /*
 ENTRY
