--- a/src/pages/Community/ChatBodyRight.css
+++ b/src/pages/Community/ChatBodyRight.css
@@ -33,6 +33,18 @@
     height: calc(100% - 2px);
 }
 
+.current-chat-box .current-chat-avatar .group-avatar {
+    border-radius: 2px;
+    background-color: #0005;
+    border: 2px solid #535c68;
+    box-shadow: 1px 1px 8px rgba(0, 0, 0, .3);
+    width: 24px;
+    height: 24px;
+    margin-left: 4px;
+    margin-right: 4px;
+    margin: 6px 3px 6px 6px;
+}
+
 .current-chat-box .current-chat-name {
     flex-grow: 1;
     line-height: 16px;
@@ -51,15 +63,19 @@
     filter: brightness(1.5);
 }
 
+.chat-wrapper .middle-body {
+    position: relative;
+}
+
 .chat-wrapper .chat-history-container {
     overflow: auto;
     position: relative;
     padding: 0 6px 14px 6px;
     word-break: break-word;
-    /* background: radial-gradient(ellipse farthest-corner at 50% 30%, #212329 0%, #1e2025 50%, #1c1d22 100%); */
-    background:
+    background: radial-gradient(ellipse farthest-corner at 50% 30%, #212329 0%, #1e2025 50%, #1c1d22 100%);
+    /* background:
         linear-gradient(rgba(30, 32, 37, 0.8), rgba(30, 32, 37, 0.8)),
-        url("https://cdnmedia.baotintuc.vn/Upload/DGCvMTLSo95Cq4TvfGr0A/files/2019/08/14-8/dhfpt.JPG");
+        url("https://cdnmedia.baotintuc.vn/Upload/DGCvMTLSo95Cq4TvfGr0A/files/2019/08/14-8/dhfpt.JPG"); */
     font-size: 14px;
     display: flex;
     flex-direction: row;
@@ -67,6 +83,7 @@
 
 .chat-history-container .chat-history-wrapper {
     transition: width .32s ease-in-out;
+    position: relative;
 }
 
 .chat-history-container .group-chat-detail {
@@ -77,6 +94,7 @@
     transition: width .32s ease-in-out, background-color .32s ease-in-out;
     background-color: rgba(34, 37, 43, 0);
     position: relative;
+    border-left: 1px solid #22252b;
 }
 
 .group-chat-detail .toggle-btn-detail {
@@ -91,24 +109,53 @@
 }
 
 .group-chat-detail .member {
-    padding: 0 5px;
+    padding: 5px 5px;
     display: flex;
     flex-direction: row;
     gap: 5px;
+    position: relative;
 }
 
 .group-chat-detail .member .member-avatar {
     width: 24px;
     height: 24px;
     transition: filter 0.3s ease;
+    position: relative;
 }
 
 .group-chat-detail .member:hover .member-avatar {
     filter: brightness(1.3);
 }
 
+.group-chat-detail .member .member-icon {
+    position: absolute;
+    width: 16px;
+    height: 16px;
+
+}
+
+.group-chat-detail .member .member-icon.owner {
+    top: -12px;
+    right: -7px;
+}
+
+.group-chat-detail .member .member-icon.owner .crown {
+
+    fill: #fb0;
+    stroke: #000;
+    stroke-width: 6px;
+    background: radial-gradient(10px 10px at 70% 60%, black 0%, rgba(0, 0, 0, 0) 50%, rgba(36, 39, 46, 0) 100%);
+}
+
+.group-chat-detail .member .member-icon.is-member {
+    bottom: 0;
+    right: -7px;
+}
+
+
 .middle-body .padder-top {
     background: linear-gradient(to right, #3a3e46 80%, #2c3037 100%);
+    transition: height 0.3s ease;
 }
 
 .padder-top .padder-top-content .setting-icon {
@@ -126,6 +173,14 @@
     fill: white;
 }
 
+.padder-end {
+    position: absolute;
+    bottom: -14px;
+    left: -6px;
+    right: 0;
+    background: linear-gradient(to top, rgba(0, 0, 0, 0.4) 0%, rgba(0, 0, 0, 0.2) 25%, rgba(0, 0, 0, 0) 100%);
+    height: 16px;
+}
 
 /*
 ENTRY
