--- a/src/index.css
+++ b/src/index.css
@@ -1,101 +1,3 @@
-/* html,
-body,
-#root,
-.app-container {
-  min-height: 100vh;
-  height: 100%;
-  width: 100%;
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: column;
-}
-
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background: #1b2838;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-.main-content {
-  flex: 1;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-
-a:hover {
-  color: #535bf2;
-}
-
-html,
-body {
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  min-height: 100vh;
-  width: 100%;
-  box-sizing: border-box;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-
-button:hover {
-  border-color: #646cff;
-}
-
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-#root,
-.App {
-  min-height: 100vh;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-}
-
-footer {
-  padding: 1em;
-  color: #888;
-  font-size: 0.9em;
-  margin-top: auto;
-  width: 100%;
-  background: transparent;
-}
-
-  */
-
 a {
   font-weight: 500;
   text-decoration: inherit;
@@ -106,4 +8,28 @@ body::selection {
   text-shadow: 1px 1px 2px #000000aa;
   color: #fff;
 
-} 
+}
+
+*::-webkit-scrollbar {
+  height: 12px;
+  width: 14px;
+  background: transparent;
+}
+
+*::-webkit-scrollbar-thumb {
+  width: 10px;
+  background-color: #434953;
+  border-radius: 10px;
+  border: 4px solid rgba(0, 0, 0, 0);
+  background-clip: padding-box;
+  transition: background-color .32s ease-in-out;
+  margin: 4px;
+  min-height: 32px;
+  min-width: 32px;
+}
+
+*::-webkit-scrollbar-thumb:hover {
+  background-color: #555;
+  width: 3px;
+
+}
