add remove and view for publisher game and view decline request

--- a/src/pages/SendGameToAdmin.css
+++ b/src/pages/SendGameToAdmin.css
@@ -302,4 +302,12 @@ progress::-webkit-progress-bar {
 progress::-moz-progress-bar {
   background-color: #4caf50;
 }
+.form-border pre{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 18px;
+}
+.form-border .decline-reason{
+    width: 80%;
+    margin: 0 auto;
+}
 
