--- a/src/pages/ChatPage/ChatBodyRight.css
+++ b/src/pages/ChatPage/ChatBodyRight.css
@@ -74,7 +74,7 @@
     word-break: break-word;
     /* background: radial-gradient(ellipse farthest-corner at 50% 30%, #212329 0%, #1e2025 50%, #1c1d22 100%); */
     background:
-        linear-gradient(rgba(30, 32, 37, 0.8), rgba(30, 32, 37, 0.8)),
+        linear-gradient(to right,rgba(30, 32, 37, 0.985), rgba(30, 32, 37, 0.7)),
         url("https://cdnmedia.baotintuc.vn/Upload/DGCvMTLSo95Cq4TvfGr0A/files/2019/08/14-8/dhfpt.JPG");
     font-size: 14px;
     display: flex;
@@ -159,6 +159,16 @@
     transition: height 0.3s ease;
 }
 
+.padder-top .padder-top-content {
+    opacity: 0;
+    transition: opacity 0.2s ease;
+}
+
+.padder-top .padder-top-content.show {
+    opacity: 1;
+}
+
+
 .padder-top .padder-top-content .group-name {
     color: #ccc;
     font-size: 18px;
@@ -166,8 +176,8 @@
 }
 
 .padder-top .padder-top-content .group-avatar-container {
-    height: 100%;
-    width: 100%;
+    height: 40px;
+    width: 40px;
     border-radius: 2px;
     background-color: #0005;
     border: 2px solid #535c68;
