--- a/src/pages/GameDetail/GameDetail.css
+++ b/src/pages/GameDetail/GameDetail.css
@@ -1,8 +1,8 @@
-.game-tags {
+.game-detail .game-tags {
   margin-bottom: 20px;
 }
 
-.game-tags .tag {
+.game-detail .game-tags .tag {
   display: inline-block;
   background-color: #202d39;
   padding: 4px 7px;
@@ -13,17 +13,17 @@
   cursor: pointer;
 }
 
-.game-tags .tag:hover {
+.game-detail .game-tags .tag:hover {
   background-color: #2c4155;
   color: #ffffff;
 }
 
 
-.full-description-section {
+.game-detail .full-description-section {
   flex: 3;
 }
 
-.system-requirements-section {
+.game-detail .system-requirements-section {
   flex: 2;
 }
 
@@ -35,23 +35,23 @@
   height: 435px;
 }
 
-.content .left-col,
-.content .right-col {
+.game-detail-header-container .content .left-col,
+.game-detail-header-container .content .right-col {
   height: 100%;
 }
 
-.content .left-col {
+.game-detail-header-container .content .left-col {
   width: 63%;
   margin: 0 2% 0 0;
   background: linear-gradient(to right, rgba(0, 0, 0, 0) 50%, rgba(0, 0, 0, 0.4) 100%);
 
 }
 
-.content .left-col .highlight-player-area {
+.game-detail-header-container .content .left-col .highlight-player-area {
   height: calc(100% - 90px);
 }
 
-.left-col .highlight-strip {
+.game-detail-header-container .left-col .highlight-strip {
   margin-top: 6px;
   position: relative;
   height: 80px;
@@ -75,19 +75,19 @@
 
 }
 
-.right-col .content-row {
+.game-detail-header-container .right-col .content-row {
   margin: 3px 0;
   width: 100%;
   display: flex;
 }
 
-.info-label {
+.game-detail-header-container .info-label {
   color: #556772;
   text-transform: uppercase;
   width: 50%;
 }
 
-.info-value {
+.game-detail-header-container .info-value {
   color: #66c0f4;
   text-decoration: none;
   width: 50%;
