--- a/src/pages/ChatPage/ChatBodyRight.css
+++ b/src/pages/ChatPage/ChatBodyRight.css
@@ -74,7 +74,7 @@
     word-break: break-word;
     /* background: radial-gradient(ellipse farthest-corner at 50% 30%, #212329 0%, #1e2025 50%, #1c1d22 100%); */
     background:
-        linear-gradient(to right,rgba(30, 32, 37, 0.985), rgba(30, 32, 37, 0.7)),
+        linear-gradient(to right, rgba(30, 32, 37, 0.985), rgba(30, 32, 37, 0.7)),
         url("https://cdnmedia.baotintuc.vn/Upload/DGCvMTLSo95Cq4TvfGr0A/files/2019/08/14-8/dhfpt.JPG");
     font-size: 14px;
     display: flex;
@@ -102,6 +102,7 @@
     cursor: pointer;
     text-align: center;
     font-size: 24px;
+    background: rgba(0, 0, 0, .3);
 }
 
 .group-chat-detail .toggle-btn-detail:hover {
@@ -116,6 +117,14 @@
     gap: 5px;
     position: relative;
 }
+
+.group-chat-detail .member .total-members {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    color: #c5d6d4;
+}
+
 
 .group-chat-detail .member .member-avatar {
     width: 24px;
