--- a/src/pages/ChatPage/GroupSettingPopup.css
+++ b/src/pages/ChatPage/GroupSettingPopup.css
@@ -133,3 +133,70 @@
     user-select: none;
     padding: 24px;
 }
+
+.kick-member .form-group .selected-members-list {
+    height: 35px;
+}
+
+.kick-member .selected-members-list .selected-member {
+    display: flex;
+    flex-direction: row;
+    gap: 5px;
+    margin: 4px;
+    border-radius: 4px;
+    background: #1f8dfe;
+    padding: 0 8px;
+    color: #dfe3e6;
+
+}
+
+
+.kick-member .selected-members-list .selected-member .selected-member-name {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 107px;
+}
+
+
+.kick-member .form-group .member-list {
+    display: flex;
+    flex-direction: column;
+    padding: 0 10px;
+    gap: 5px;
+}
+
+.kick-member .form-group .member-list .member-item {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    align-items: center;
+    gap: 5px;
+    cursor: pointer;
+    user-select: none;
+    transition: background 0.3s ease;
+
+}
+
+.kick-member .form-group .member-list .member-item:hover .avatar {
+    filter: brightness(1.5);
+    transition: filter 0.3s ease-in;
+}
+
+
+.kick-member .form-group .member-list .member-item .avatar {
+    width: 38px;
+    height: 38px;
+    transition: filter 0.3s ease-out;
+
+}
+
+.kick-member .form-group .member-list .member-item .avatar img {
+    height: 100%;
+    width: 100%;
+}
+
+.kick-member .form-group .member-list .member-item.selected {
+    background: #596168;
+    transition: background 0.3s ease;
+}
